RESOLVED FIXED249057
Fix use-after-move in WebCore::RealtimeMediaSource::supportsSizeAndFrameRate()
https://bugs.webkit.org/show_bug.cgi?id=249057
Summary Fix use-after-move in WebCore::RealtimeMediaSource::supportsSizeAndFrameRate()
David Kilzer (:ddkilzer)
Reported 2022-12-09 17:40:33 PST
Fix use-after-move in WebCore::RealtimeMediaSource::supportsSizeAndFrameRate(). Both `width` and `height` have a use-after-move bug in Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp: ``` if (!supportsSizeAndFrameRate(WTFMove(width), WTFMove(height), WTFMove(frameRate))) { // Let's try without frame rate constraint if not mandatory. if (frameRateConstraint && !frameRateConstraint->isMandatory() && supportsSizeAndFrameRate(WTFMove(width), WTFMove(height), { })) ```
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-09 17:40:47 PST
David Kilzer (:ddkilzer)
Comment 2 2022-12-09 17:42:31 PST
EWS
Comment 3 2022-12-10 13:37:51 PST
Committed 257685@main (c8239ff245f1): <https://commits.webkit.org/257685@main> Reviewed commits have been landed. Closing PR #7424 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.