Fix use-after-move in WebCore::RealtimeMediaSource::supportsSizeAndFrameRate() https://bugs.webkit.org/show_bug.cgi?id=249057 <rdar://103201164>

Reviewed by Wenson Hsieh.

WTFMove() was being called on `width` and `height` variables
twice in a certain code path, resulting in a use-after-move.
Fix the bug by removing the penultimate WTFMove() calls.

* Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::RealtimeMediaSource::supportsSizeAndFrameRate):

Canonical link: https://commits.webkit.org/257685@main